[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
repository = "https://github.com/HalaOS/rasi-libp2p.git"
version = "0.1.0"

[workspace.dependencies]
rasi = { path = "rasi/crates/rasi", version = "^0.1" }
rasi-ext = { path = "rasi/crates/ext", version = "^0.1" }
rasi-default = { path = "rasi/crates/default", version = "^0.1" }
rasi-syscall = { path = "rasi/crates/syscall", version = "^0.1" }
rasi-spec = { path = "rasi/crates/spec", version = "^0.1" }
# utils
log = { version = "^0.4" }
pretty_env_logger = "^0.5"
async-trait = "0.1.79"
# rasi deps
futures = { version = "^0.3" }
bitmask-enum = "^2.2"
boring = "^4.4.0"
quiche = { version = "^0.20.0", features = ["boringssl-boring-crate"] }
bytes = "^1.5"
rand = { version = "^0.8", features = ["getrandom"] }
cooked-waker = "^5"
parking_lot = "^0.12"
ring = "^0.17"
dashmap = "5.5.3"
divan = "^0.1"
futures-test = "0.3.30"
num_cpus = "^1.16"
boxcar = "^0.2.4"
mio = { version = "^0.8.9", features = ["os-poll", "net"] }
thiserror = "1.0.57"
windows-sys = "^0.52"
http = "^1.0"
httparse = "^1.8"
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
# libp2p
multiaddr = "^0.18"
identity = { version = "^0.2", package = "libp2p-identity" }
semver = "^1.0"
multistream-select = "^0.13"
#tls
rcgen = "^0.12"
rustls = "0.23.3"
yasna = "0.5.2"
x509-parser = "0.16.0"
der-parser = "9.0.0"
webpki = "0.22.4"
oid-registry = "0.7.0"
x509-cert = "0.2.5"
p256 = "^0.13"
p384 = "^0.13"
p521 = "^0.13"
sha2 = "0.10.8"
ecdsa = "0.16.9"
digest = "0.10.7"
const-oid = "0.9.6"
der = "0.7.8"
rsa = "^0.9"
zeroize = "1.7.0"
pkcs1 = "0.7.5"
sec1 = "0.7.3"
# protobuf
protobuf-codegen = "3.4.0"
protoc-bin-vendored = "3.0.0"
protobuf = "3.4.0"
