[package]
description = "Kad implementation for rp2p framework"
documentation = "https://docs.rs/rp2p-kad"
edition.workspace = true
license = "MIT"
name = "rp2p-kad"
repository.workspace = true
version.workspace = true
readme = "../../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
