[package]
description = "Yet another RASI-based libp2p implementation  for the rust language"
documentation = "https://docs.rs/rasi-libp2p"
edition.workspace = true
license = "MIT"
name = "rasi-libp2p"
repository.workspace = true
version.workspace = true
readme = "../../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
multiaddr = { workspace = true }
identity = { workspace = true, features = ["ed25519", "rand"] }
semver = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
bitmask-enum = { workspace = true }
log = { workspace = true }
multistream-select = { workspace = true }
rand = { workspace = true }
rasi = { workspace = true }
rasi-ext = { workspace = true }
futures = { workspace = true, features = ["executor"] }
protobuf = { workspace = true }

[dev-dependencies]
futures-test = { workspace = true }
pretty_env_logger = { workspace = true }

[build-dependencies]
protobuf-codegen = { workspace = true }
protoc-bin-vendored = { workspace = true }

[features]
default = ["memory_keypair", "memory_neighbors", "auto_ping_conn_pool"]
kad = []
circuit = []
memory_keypair = []
memory_neighbors = []
auto_ping_conn_pool = []
tcp = []
tls = []
yamux = []
quic = []
