[package]
description = "A proper implementation of the yamux protocol"
documentation = "https://docs.rs/rp2p-mux"
edition.workspace = true
license = "MIT"
name = "rp2p-mux"
repository.workspace = true
version.workspace = true
readme = "../../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
futures = { workspace = true }
rasi-ext = { workspace = true, default-features = false }
bitmask-enum = { workspace = true }
thiserror = { workspace = true }
