[package]
description = "A proper implementation of the yamux protocol"
documentation = "https://docs.rs/rp2p-mux"
edition.workspace = true
license = "MIT"
name = "rp2p-mux"
repository.workspace = true
version.workspace = true
readme = "../../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
futures = { workspace = true }
rasi = { workspace = true }
rasi-ext = { workspace = true, features = ["event_map"] }
bitmask-enum = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

[dev-dependencies]
futures-test = { workspace = true }
rasi-default = { workspace = true }
pretty_env_logger = { workspace = true }
