[package]
description = "Yet another RASI-based libp2p protocol implementation"
documentation = "https://docs.rs/rp2p"
edition.workspace = true
license = "MIT"
name = "rp2p"
repository.workspace = true
version.workspace = true
readme = "../../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rp2p-core = { workspace = true }
rp2p-x509 = { workspace = true }
rp2p-tcp = { workspace = true }
rp2p-conn-pool = { workspace = true }
rp2p-route-table = { workspace = true }
rp2p-hostkey = { workspace = true }

[dev-dependencies]
rasi = { workspace = true }
rasi-ext = { workspace = true, default-features = false }
rasi-default = { workspace = true }
pretty_env_logger = { workspace = true }
clap = { workspace = true, features = ["derive"] }
log = { workspace = true }
