[package]
description = "Tcp transport for rp2p framework"
documentation = "https://docs.rs/rp2p-tcp"
edition.workspace = true
license = "MIT"
name = "rp2p-tcp"
repository.workspace = true
version.workspace = true
readme = "../../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rp2p-core = { workspace = true }
rp2p-x509 = { workspace = true }
async-trait = { workspace = true }
yamux = { workspace = true }
#rasi
rasi = { workspace = true }
rasi-ext = { workspace = true }
#utils
log = { workspace = true }

[dev-dependencies]
rasi-default = { workspace = true }
futures-test = { workspace = true }
pretty_env_logger = { workspace = true }
