[package]
description = "utilities for generating/parsing/verify x509 certifacate with libp2p extension"
documentation = "https://docs.rs/rp2p-x509"
edition.workspace = true
license = "MIT"
name = "rp2p-x509"
repository.workspace = true
version.workspace = true
readme = "../../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
x509-cert = { workspace = true, features = ["builder", "hazmat"] }
p256 = { workspace = true, features = ["arithmetic", "pkcs8", "pem"] }
const-oid = { workspace = true }
der = { workspace = true }
rsa = { workspace = true }
sha2 = { workspace = true, features = ["oid"] }
p384 = { workspace = true }
p521 = { workspace = true }
zeroize = { workspace = true }
pkcs1 = { workspace = true }
sec1 = { workspace = true }
identity = { workspace = true }
rp2p-core = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
protobuf = { workspace = true }
